add hsts and xss protection, add no cache on web security, add remember me
