# bookmark-service/src/main/java/ro/rasel/service/bookmarks/controller/BookmarkApi.java
@@ -9,20 +9,23 @@ import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import ro.rasel.service.bookmarks.domain.Bookmark;
+import ro.rasel.service.bookmarks.domain.BookmarkDetails;
 
+import javax.validation.Valid;
 import java.util.Collection;
 
 import static org.springframework.http.MediaType.APPLICATION_JSON_VALUE;
 
-@RequestMapping(value = "/v1/users/{userId}/bookmarks", produces = APPLICATION_JSON_VALUE)
+@RequestMapping(value = "/v1/users/{userId}/bookmarks")
 @Api(tags = BookmarkApi.TAG)
 public interface BookmarkApi {
     String TAG = "bookmark";
 
-    @GetMapping
+    @GetMapping(produces = APPLICATION_JSON_VALUE)
     @ApiOperation(value = "get bookmarks", notes = "Get a list of bookmarks", tags = TAG)
     @ApiResponses({
             @ApiResponse(code = 200, message = "Ok"),
@@ -39,15 +42,26 @@ public interface BookmarkApi {
             @ApiResponse(code = 500, message = "Internal server error")})
     ResponseEntity<Bookmark> getBookmark(@PathVariable String userId, @PathVariable long bookmarkId);
 
-    @PostMapping(consumes = APPLICATION_JSON_VALUE)
+    @PostMapping(produces = APPLICATION_JSON_VALUE, consumes = APPLICATION_JSON_VALUE)
     @ApiOperation(value = "add bookmark", notes = "Create a new bookmark and return it", tags = TAG)
     @ApiResponses({
             @ApiResponse(code = 200, message = "Ok"),
             @ApiResponse(code = 400, message = "Bad request"),
             @ApiResponse(code = 500, message = "Internal server error")})
-    Bookmark createBookmark(@PathVariable String userId, @RequestBody Bookmark bookmark);
+    Bookmark createBookmark(@PathVariable String userId, @Valid @RequestBody BookmarkDetails bookmarkDetails);
 
-    @DeleteMapping(value = "/{bookmarkId}", consumes = APPLICATION_JSON_VALUE)
+    @PutMapping(value = "/{bookmarkId}", produces = APPLICATION_JSON_VALUE, consumes = APPLICATION_JSON_VALUE)
+    @ApiOperation(value = "add bookmark", notes = "Update a bookmark and return it", tags = TAG)
+    @ApiResponses({
+            @ApiResponse(code = 200, message = "Ok"),
+            @ApiResponse(code = 400, message = "Bad request"),
+            @ApiResponse(code = 404, message = "Not Found"),
+            @ApiResponse(code = 500, message = "Internal server error")})
+    ResponseEntity<Bookmark> updateBookmark(
+            @PathVariable String userId, @PathVariable long bookmarkId,
+            @Valid @RequestBody BookmarkDetails bookmarkDetails);
+
+    @DeleteMapping(value = "/{bookmarkId}")
     @ApiOperation(code = 201, value = "delete bookmarks", notes = "Delete a bookmark", tags = TAG)
     @ApiResponses({
             @ApiResponse(code = 201, message = "No content"),
